# sphinx-bug-20220617

./: README.rst  mypackage.py  setup.cfg
docs/: conf.py  index.rst
src/: mypackage.py
