[metadata]
name = sphinx-bug-20220617
version = attr:mypackage.__version__
description = Demonstration of a Sphinx bug
long_description = file:README.rst
long_description_content_type = text/x-rst
author = John Thorvald Wodder II
author_email = sphinx-bug-20220617@varonathe.org
license = MIT
license_files = LICENSE
url = https://github.com/jwodder/sphinx-bug-20220617

keywords =
    ###

classifiers =
    Development Status :: 3 - Alpha
    #Development Status :: 4 - Beta
    #Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: MIT License
    ###

project_urls =
    Source Code = https://github.com/jwodder/sphinx-bug-20220617
    Bug Tracker = https://github.com/jwodder/sphinx-bug-20220617/issues

[options]
py_modules = mypackage
package_dir =
    =src
include_package_data = True
python_requires = ~=3.7
